# ecommerce-api-with-fastapi

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-compose2.yml  main.py  pyproject.toml
.github/workflows/: main.yml
authentication/: crud.py  cruds.py  models.py  repo.py  routes.py
common/: concurrency.py  config.py  exceptions.py  injection.py  log.py
common/database/: db.py  redis.py
features/product/: cruds.py  models.py  repo.py  routes.py
logs/: log.txt
migrations/: env.py
migrations/versions/: 1f6b67ed9e87_init.py  5b0046990d67_modified_product_model_to_include_owner_.py  7f0ee70b868b_restructure_usercreate.py  94742c83f3f3_like_model.py  a7fdb6b7874c_initial.py
