[tool.poetry]
name = "fastapi-ecom"
version = "0.1.0"
description = "Ecommerce api with fastapi"
authors = ["Abdulkbk <abdoollahikbk@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ecom"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
fastapi-utils = "^0.2.1"
injector = "^0.20.1"
bcrypt = "^4.0.1"
alembic = "^1.9.0"
asyncpg = "^0.27.0"
pyjwt = "^2.6.0"
black = "^22.12.0"
isort = "^5.11.4"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
